force-app/main/CSLogger/objects/Log_Settings__mdt/fields/Bypass_Platform_Events__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Platform_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When True, LogScience will bypass platform events as configured in Log_Settings_mdt</description>
    <label>Bypass Platform Events</label>
    <type>Checkbox</type>
</CustomField>