force-app/main/CSLogger/objects/Log_Settings__mdt/fields/Enable_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description
    >When True, LogScience will perform its logging functions as configured in the remainder of Log_Settings__mdt</description>
    <label>Enable Logging</label>
    <type>Checkbox</type>
</CustomField>