force-app/main/CSLogger/objects/Log_Settings__mdt/fields/Enable_Pruning__c.field-meta.xml
<CustomField>
    <fullName>Enable_Pruning__c</fullName>
    <defaultValue>false</defaultValue>
    <description
    >When True, LogScience will perform deletes on persistently-stored logging data in the Log__c object</description>
    <label>Enable Pruning</label>
    <type>Checkbox</type>
</CustomField>