force-app/main/CSLogger/objects/Log_Settings__mdt/fields/Interfaced_Class_Order__c.field-meta.xml
<CustomField>
    <fullName>Interfaced_Class_Order__c</fullName>
    <defaultValue>&quot;LogToObject,SystemDebug&quot;</defaultValue>
    <description
    >Configure Log_Settings__mdt to determine which functionality is executed when a log request is submitted to LogScience</description>
    <label>Interfaced_Class_Order</label>
    <type>TextArea</type>
</CustomField>