force-app/main/CSLogger/objects/Log_Settings__mdt/fields/Max_Number_Of_Logs__c.field-meta.xml
<CustomField>
    <fullName>Max_Number_Of_Logs__c</fullName>
    <description
    >When greater than 0, the number indicated will inform the Pruning functionality how many log rows it should allow to persist</description>
    <label>Max Number Of Logs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>